Prepare java 8 regression